# platogram

./: .gitignore  Makefile  README.md  pyproject.toml
examples/: README.md  audio_to_paper.sh  remember.html  remember.py  telegram.py
examples/audio-to-blog-api/: Makefile  serve.py  synthesis.py
examples/audio-to-blog-api/api/: serve.py  synthesis.py
examples/audio_to_blog_api/: pyproject.toml  response.py  serve.py  synthesize.py
examples/audio_to_blog_api/api/: response.py  serve.py  synthesize.py
notebooks/: quick_start.ipynb  translate.ipynb
platogram/: __init__.py  cli.py  ingest.py  ops.py  parsers.py  types.py  utils.py
platogram/asr/: __init__.py  assembly.py
platogram/llm/: __init__.py  anthropic.py
samples/: jfk.json  obama.json
tests/: test_api.py  test_asr.py  test_cli.py  test_evals.py  test_ingest.py  test_library.py  test_llm.py  test_ops.py  test_platogram.py  test_quick_start.py
web/: index.html  main.py
