[tool.poetry]
name = "api"
version = "0.1.0"
description = ""
authors = ["axelKeizoStahl <axelkeizo@gmail.com>"]
readme = "README.md"
package-mode = false

[tool.poetry.dependencies]
python = "^3.12"
platogram = {git = "https://github.com/code-anyway/platogram.git"}
flask = "^3.0.3"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
